--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1093,7 +1093,7 @@ body.darkmode a.btn-default {
     padding: 40px 30px;
     gap: 20px;
   }
-  footer {
+  /* footer {
     padding: 80px 0 0;
   }
   .footer-nav {
@@ -1105,8 +1105,8 @@ body.darkmode a.btn-default {
   .footer-bottom {
     padding: 20px 0;
     margin-top: 50px;
-  }
-  .footer-social {
+  } */
+  .social-upper-part {
     margin-top: 15px;
     align-items: center;
     justify-content: center;
@@ -1269,4 +1269,12 @@ img.bright {
 }
 .intro-p :last-child {
   margin-bottom: 0px;
+}
+
+.image-main {
+  margin-bottom: -7px !important;
+}
+
+.fixed-position {
+  position: fixed;
 }
